# agentic-mid-training

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
configs/: adaptive_entropy.yaml  base.yaml  full_recipe.yaml  jackknife_baseline.yaml  loo_baseline.yaml  partial_format.yaml
docs/: agentic-mid-training  agentic-mid-training.md
environments/: __init__.py  gigachat_tool_calling_env.py
experiments/gigachat-a100/: README.md
experiments/gigachat-a100/configs/: deepspeed_zero2.json  deepspeed_zero3.json  (+4 more)
scripts/: analyze_results.py  check_vllm_health.sh  run_all_experiments.sh  run_experiment.py  setup_vm.sh  start_atropos_rlvr.sh  start_full_training.sh  start_mid_training.sh  start_rlvr_full.sh  start_vllm_server.sh
src/: __init__.py
src/entropy_reward/: __init__.py  trainer.py
src/evaluation/: __init__.py  agent_eval.py
src/training/: __init__.py  atropos_rlvr.py  atropos_trainer.py  dpo_training.py  full_pipeline.py  grpo_training.py  mid_training.py  rlvr_atropos_full.py  rlvr_direct.py  rlvr_training.py
src/utils/: __init__.py
swe_bench_eval/: README.md  __init__.py  requirements.txt
swe_bench_eval/configs/: litellm_registry.json  swe_verified.yaml
swe_bench_eval/models/: __init__.py  lora_server.py  vllm_lora_server.py
swe_bench_eval/scripts/: oneliner.sh  run_comparison.sh  run_swe_lite_isolated.sh  run_swe_verified.sh
tests/: test_data.py  test_entropy_strategies.py  test_kl_anchor.py  test_metrics.py  test_racc_parser_accuracy.py  test_rewards.py  test_stop_conditions.py  test_vllm_client.py
(+34 files in other folders)
